--- a/styles/sass/base/_general.scss
+++ b/styles/sass/base/_general.scss
@@ -100,9 +100,10 @@ button {
 
 .fa-times {
   @include fontSize(26);
+  transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
   &:hover {
-    color: $dark-light;
+    transform: scale(1.2);
   }
 }
 
