--- a/styles/style.css
+++ b/styles/style.css
@@ -389,10 +389,13 @@ button {
 
 .fa-times {
   font-size: 2.6rem;
+  -webkit-transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .fa-times:hover {
-  color: rgba(0, 0, 0, 0.6);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .fa-chevron-circle-right {
@@ -1090,6 +1093,27 @@ body {
   height: 50px;
 }
 
+.about__skills .fa-heart {
+  position: relative;
+  z-index: -1;
+  font-size: 5rem;
+}
+
+.about__skills .fa-heart::after {
+  content: "</>";
+  display: inline-block;
+  font-size: 1.5rem;
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 10px;
+  height: 10px;
+  color: #ffffff;
+  z-index: 10;
+}
+
 .about__skills .row {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -1098,6 +1122,7 @@ body {
 .about__skills__list .col-2 {
   text-align: center;
   margin: 20px;
+  max-height: 55px;
 }
 
 .about__skills__list .col-2 .fa-universal-access {
