--- a/styles/style.css
+++ b/styles/style.css
@@ -1437,6 +1437,12 @@ body {
   }
 }
 
+@media only screen and (max-width: 650px) {
+  .portfolio .section-title {
+    margin: 20px 20px 10px;
+  }
+}
+
 @media only screen and (max-width: 450px) {
   .portfolio .section-title {
     margin-top: 10px;
@@ -1445,6 +1451,12 @@ body {
 
 .portfolio__description {
   margin: 20px 0;
+}
+
+@media only screen and (max-width: 650px) {
+  .portfolio__description {
+    margin: 0 20px 20px;
+  }
 }
 
 .portfolio__list .col-4 {
@@ -1594,6 +1606,7 @@ body {
         -ms-flex-pack: start;
             justify-content: flex-start;
     overflow: auto;
+    margin: 0 20px;
   }
   .portfolio__list.row .col-4:last-child {
     margin-right: 40px;
@@ -1602,19 +1615,25 @@ body {
 
 @media only screen and (max-width: 968px) {
   .portfolio__list {
-    margin-bottom: 50px;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  .portfolio__list.row {
-    margin: 0;
+    margin-bottom: 30px;
   }
 }
 
 @media only screen and (max-width: 968px) {
   .portfolio {
     min-height: unset;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .portfolio .wrapper {
+    padding: 0;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .portfolio {
+    margin-top: 20px;
   }
 }
 
@@ -1822,7 +1841,7 @@ body {
     width: 100%;
     -webkit-transform: none;
             transform: none;
-    margin-top: 30px;
+    margin-top: 50px;
     border-radius: 10px;
     z-index: 1;
   }
