Update border radius value

--- a/styles/sass/components/_form.scss
+++ b/styles/sass/components/_form.scss
@@ -26,7 +26,7 @@
       padding: 20px 0;
       @include fontSize(15);
       margin-bottom: 20px;
-      border-radius: none;
+      border-radius: 0;
     }
   }
 
